# omakase-maintainer

./: .env.local.example  .gitignore  HIPPIUS.md  pyproject.toml
.github/workflows/: ci.yml  punch-eval.yml.template
configs/: maintainer.dev.json  maintainer.prod.example.json  registry.dev.json
oc_maintainer/: __init__.py  cli.py  gates.py  identity.py  intake.py  metagraph.py  peggy.py  state.py  storage.py
omakase_maintainer/: __init__.py  cli.py  gates.py  identity.py  intake.py  keys.py  metagraph.py  punch.py  seeds.py  signing.py  state.py  weights_crypto.py
scripts/: demo_rebuild.py  weekly_reset.sh
state/: maintainer.pub.json  metrics.json  miners.json
tests/: conftest.py  test_e2e.py  test_gate_round.py  test_identity.py  test_state.py  test_storage.py
