[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "omakase-maintainer"
version = "0.1.0"
description = "Punch — the maintainer agent for the OC orchestration competitions."
requires-python = ">=3.11"
dependencies = ["omakase-eval", "substrate-interface>=1.7", "pynacl>=1.5"]

[project.scripts]
omakase-maintainer = "omakase_maintainer.cli:main"

[tool.setuptools.packages.find]
include = ["omakase_maintainer*"]
